trunk/Archive2/91/2c0ee4a5bda53b/output
main.cpp: In function 'int main()':
main.cpp:53:42: error: invalid conversion from 'Base*' to 'Derived*' [-fpermissive]
     Derived* de2 = dynamic_cast<Base*>(b3);
                                          ^
main.cpp:53:14: warning: unused variable 'de2' [-Wunused-variable]
     Derived* de2 = dynamic_cast<Base*>(b3);
              ^
